Makes the code compile again and improves skill